<resources>
    <string name="app_name">My Vocab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="enter_new_word">Enter new word…</string>
    <string name="add">Add</string>
    <string name="meaning">Meaning…</string>
    <string name="no_words">No Words</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="confirm_word_inserted">Word Added to Dictionary</string>
    <string name="undo">UNDO</string>
    <string name="word_not_entered">Please enter a word…</string>
    <string name="meaning_not_entered">Please enter meaning…</string>
    <string name="confirm_word_delete">Do you really want to delete the word?</string>
    <string name="confirm_word_edit">Do you really want to edit the word?</string>
    <string name="yes">YES</string>
    <string name="select_type">please select … part of speech</string>
    <string name="error_word_enter">Please enter a word…</string>
    <string name="error_meaning_enter">Please enter meaning</string>
    <string name="no_change">Nothing to update…</string>
    <string name="add_sentence">Add Sentence</string>
    <string name="add_synonym">Add Synonym</string>
    <string name="add_antonym">Add Antonym</string>
    <string name="edit">Edit</string>
    <string name="antonyms">Antonyms</string>
    <string name="synonyms">Synonyms</string>
    <string name="sentences">Sentences</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_sentence">enter sentence…</string>
</resources>
